--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,9 @@
 </head>
 <body>
   <app-root></app-root>
+  
+  <script src="https://files.worldwind.arc.nasa.gov/artifactory/web/0.9.0/worldwind.min.js"
+    type="text/javascript"></script>
+
 </body>
 </html>
